--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1 id="1" center>Döda fallet</h1>
+    <h1 id="1">Döda fallet</h1>
     <nav>
       <ul>
         <a href="1">Döda fallet</a>
