--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <h1 id="1">Döda fallet</h1>
     <nav>
       <ul>
-        <a href="1">Döda fallet</a>
-        <a href="2">Geologiska förutsättningar</a>
-        <a href="3">Planer på utgrävning</a>
-        <a href="4">Utgrävningen</a>
-        <a href="5">Referenser</a>
+        <li> <a href="1">Döda fallet</a> </li>
+        <li> <a href="2">Geologiska förutsättningar</a> </li>
+        <li> <a href="3">Planer på utgrävning</a> </li>
+        <li> <a href="4">Utgrävningen</a> </li>
+        <li> <a href="5">Referenser</a> </li>
       </ul>
     </nav>
   </header>
